
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Visitor for css"
documentation = "https://rustdoc.swc.rs/swc_css_visit/"
edition = "2021"
license = "Apache-2.0"
name = "ad_swc_css_visit"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_css_visit"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg","docsrs"]

[lib]
bench = false

[features]
default = ["serde"]
path = []

[dependencies.serde]
version = "1"
optional = true

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_css_ast]
version = "1.0.0"
path = "../swc_css_ast"
package = "ad_swc_css_ast"

[dependencies.swc_visit]
version = "1.0.0"
path = "../swc_visit"
package = "ad_swc_visit"
