
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Extensions for @swc/core (nodejs)"
documentation = "https://rustdoc.swc.rs/swc_ecma_ext_transforms/"
edition = "2021"
license = "Apache-2.0"
name = "ad_swc_ecma_ext_transforms"
version = "1.0.0"
_name = "swc_ecma_ext_transforms"

[lib]
bench = false

[dependencies.phf]
version = "0.11"
features = ["macros"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_utils]
version = "1.0.0"
path = "../swc_ecma_utils"
package = "ad_swc_ecma_utils"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"
