
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Linter for the swc project"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_ecma_lints"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_ecma_lints"

[lib]
bench = false

[dependencies]
auto_impl = "1.1.0"
dashmap = "5.4.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
regex = "1"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
features = ["concurrent"]
package = "ad_swc_common"

[dependencies.swc_config]
version = "1.0.0"
path = "../swc_config"
package = "ad_swc_config"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
features = ["serde"]
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_utils]
version = "1.0.0"
path = "../swc_ecma_utils"
package = "ad_swc_ecma_utils"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dev-dependencies.swc_ecma_codegen]
version = "1.0.0"
path = "../swc_ecma_codegen"
package = "ad_swc_ecma_codegen"

[dev-dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dev-dependencies.swc_ecma_transforms_base]
version = "1.0.0"
path = "../swc_ecma_transforms_base"
package = "ad_swc_ecma_transforms_base"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"

[features]
non_critical_lints = []
