
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "EcmaScript code minifier."
documentation = "https://rustdoc.swc.rs/swc_ecma_minifier/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs","src/lists/*.json"]
license = "Apache-2.0"
name = "ad_swc_ecma_minifier"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_ecma_minifier"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg","docsrs"]

[lib]
bench = false

[features]
concurrent = ["swc_common/concurrent","swc_ecma_transforms_base/concurrent-renamer","swc_ecma_transforms_optimization/concurrent","rayon","indexmap/rayon"]
debug = ["backtrace","swc_ecma_transforms_optimization/debug"]
default = ["serde-impl"]
extra-serde = ["swc_ecma_ast/serde-impl","serde-impl"]
serde-impl = []
trace-ast = []

[dependencies]
arrayvec = "0.7.2"
indexmap = "2.0.0"
num-bigint = "0.4.3"
num_cpus = "1.13.1"
once_cell = "1.18.0"
parking_lot = "0.12.1"
radix_fmt = "=1.0.0"
regex = "1.5.3"
rustc-hash = "1.1.0"
ryu-js = "1.0.0"
serde_json = "1.0.61"
tracing = "0.1.37"

[dependencies.backtrace]
version = "0.3.61"
optional = true

[dependencies.pretty_assertions]
version = "1.3"
optional = true

[dependencies.rayon]
version = "1.7.0"
optional = true

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_config]
version = "1.0.0"
path = "../swc_config"
features = ["sourcemap"]
package = "ad_swc_config"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
features = ["serde"]
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_codegen]
version = "1.0.0"
path = "../swc_ecma_codegen"
package = "ad_swc_ecma_codegen"

[dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dependencies.swc_ecma_transforms_base]
version = "1.0.0"
path = "../swc_ecma_transforms_base"
package = "ad_swc_ecma_transforms_base"

[dependencies.swc_ecma_transforms_optimization]
version = "1.0.0"
path = "../swc_ecma_transforms_optimization"
package = "ad_swc_ecma_transforms_optimization"

[dependencies.swc_ecma_usage_analyzer]
version = "1.0.0"
path = "../swc_ecma_usage_analyzer"
package = "ad_swc_ecma_usage_analyzer"

[dependencies.swc_ecma_utils]
version = "1.0.0"
path = "../swc_ecma_utils"
package = "ad_swc_ecma_utils"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dependencies.swc_timer]
version = "1.0.0"
path = "../swc_timer"
package = "ad_swc_timer"

[dev-dependencies]
ansi_term = "0.12.1"
anyhow = "1"
criterion = "0.5.1"
pretty_assertions = "1.3"
walkdir = "2"

[dev-dependencies.swc_ecma_testing]
version = "1.0.0"
path = "../swc_ecma_testing"
package = "ad_swc_ecma_testing"

[dev-dependencies.swc_malloc]
version = "1.0.0"
path = "../swc_malloc"
package = "ad_swc_malloc"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"

[[bench]]
harness = false
name = "full"
