
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "preset-env for the swc"
documentation = "https://rustdoc.swc.rs/swc_ecma_preset_env/"
repository = "https://github.com/swc-project/swc"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs","src/**/*.json","data/**/*.json"]
license = "Apache-2.0"
name = "ad_swc_ecma_preset_env"
version = "1.0.0"
_name = "swc_ecma_preset_env"

[lib]
bench = false

[features]
default = ["serde-impl"]
serde-impl = ["serde"]

[dependencies]
anyhow = "1"
dashmap = "5.4.0"
indexmap = "2.0.0"
once_cell = "1.18.0"
serde_json = "1"
st-map = "0.2.0"
rustc-hash = "1.1.0"

[dependencies.semver]
version = "1.0.17"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.preset_env_base]
version = "1.0.0"
path = "../preset_env_base"
package = "ad_preset_env_base"

[dependencies.string_enum]
version = "1.0.0"
path = "../string_enum"
package = "ad_string_enum"

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_transforms]
version = "1.0.0"
path = "../swc_ecma_transforms"
features = ["compat","proposal"]
package = "ad_swc_ecma_transforms"

[dependencies.swc_ecma_utils]
version = "1.0.0"
path = "../swc_ecma_utils"
package = "ad_swc_ecma_utils"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.3"

[dev-dependencies.swc_ecma_codegen]
version = "1.0.0"
path = "../swc_ecma_codegen"
package = "ad_swc_ecma_codegen"

[dev-dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"

[[bench]]
harness = false
name = "polyfills"
