
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Quasi quotation system for ecmascript"
documentation = "https://rustdoc.swc.rs/swc_ecma_quote_macros/"
edition = "2021"
license = "Apache-2.0"
name = "ad_swc_ecma_quote_macros"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_ecma_quote_macros"

[lib]
bench = false
proc-macro = true

[dependencies]
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_parser]
version = "1.0.0"
path = "../swc_ecma_parser"
package = "ad_swc_ecma_parser"

[dependencies.swc_macros_common]
version = "1.0.0"
path = "../swc_macros_common"
package = "ad_swc_macros_common"
