
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "EcmaScript variable usage analyzer"
documentation = "https://rustdoc.swc.rs/swc_ecma_usage_analyzer/"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_ecma_usage_analyzer"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_ecma_usage_analyzer"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg","docsrs"]

[lib]
bench = false

[features]
concurrent = ["swc_common/concurrent","indexmap/rayon"]
trace-ast = []

[dependencies]
indexmap = "2.0.0"
rustc-hash = "1.1.0"
tracing = "0.1.37"

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"

[dependencies.swc_ecma_ast]
version = "1.0.0"
path = "../swc_ecma_ast"
package = "ad_swc_ecma_ast"

[dependencies.swc_ecma_utils]
version = "1.0.0"
path = "../swc_ecma_utils"
package = "ad_swc_ecma_utils"

[dependencies.swc_ecma_visit]
version = "1.0.0"
path = "../swc_ecma_visit"
package = "ad_swc_ecma_visit"

[dependencies.swc_timer]
version = "1.0.0"
path = "../swc_timer"
package = "ad_swc_timer"
