
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>","Daniel Woznicki <daniel.woznicki@gmail.com>"]
description = "ESTree AST node definitions"
documentation = "https://rustdoc.swc.rs/swc_estree_ast/"
edition = "2021"
license = "Apache-2.0"
name = "ad_swc_estree_ast"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_estree_ast"

[package.metadata.docs.rs]
all-features = true

[lib]
bench = false

[features]
default = ["serde-impl"]
serde-impl = ["serde"]

[dependencies]
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.better_scoped_tls]
version = "1.0.0"
path = "../better_scoped_tls"
package = "ad_better_scoped_tls"

[dependencies.swc_atoms]
version = "1.0.0"
path = "../swc_atoms"
package = "ad_swc_atoms"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common"
package = "ad_swc_common"
