
[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Graph analyzer"
edition = "2021"
include = ["Cargo.toml","src/**/*.rs"]
license = "Apache-2.0"
name = "ad_swc_graph_analyzer"
repository = "https://github.com/swc-project/swc.git"
version = "1.0.0"
_name = "swc_graph_analyzer"

[lib]
bench = false

[dependencies]
auto_impl = "1.1.0"
petgraph = "0.6.0"
tracing = "0.1.37"

[dependencies.swc_common]
version = "1.0.0"
path = "../swc_common/"
package = "ad_swc_common"

[dependencies.swc_fast_graph]
version = "1.0.0"
path = "../swc_fast_graph/"
package = "ad_swc_fast_graph"

[dev-dependencies.testing]
version = "1.0.0"
path = "../testing"
package = "ad_testing"
